K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname-service
spec:
  selector:
    app: node-hostname
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 3000 
  type: NodePort
