K8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  rules:
  - host: nodehostname.kentab.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-hostname-service
            port:
              number: 80
  tls:
  - hosts:
    - nodehostname.kentab.com  
    secretName: tls-secret
